--- a/app/src/main/res/layout/content_administrator.xml
+++ b/app/src/main/res/layout/content_administrator.xml
@@ -6,53 +6,89 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".AdministratorActivity"
-    tools:showIn="@layout/app_bar_administrator">
 
-    <Button
-        android:id="@+id/button6"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/button_height_55"
-        android:layout_marginStart="48dp"
+    >
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="142dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_weight="1"
-        android:background="@drawable/rounded_button"
-        android:onClick="btnLastSearchedBooks"
-        android:text="Last seached books"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView6">
 
-    <Button
-        android:id="@+id/button2"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/button6"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/button_height_55"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_button"
+                android:layout_marginEnd="10dp"
+                android:onClick="btnLastSearchedBooks"
+                android:text="Last seached books" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/button_height_55"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_button"
+                android:onClick="btnLastConnectedUsers"
+                android:text="Last connected users" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/button_height_55"
+                android:layout_weight="1"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/rounded_button"
+                android:onClick="btnGenresOnClick"
+                android:text="Books searched by domains" />
+
+            <Button
+                android:id="@+id/button4"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/button_height_55"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_button"
+                android:onClick="btnLoggingLatWeekOnClick"
+                android:text="Loggings on last week" />
+        </LinearLayout>
+    </LinearLayout>
+
+
+
+
+    <TextView
+        android:id="@+id/textView6"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/button_height_55"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="468dp"
-        android:layout_weight="1"
-        android:background="@drawable/rounded_button"
-        android:onClick="btnLastConnectedUsers"
-        android:text="Last connected users"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="260dp"
+        android:layout_marginEnd="8dp"
+        android:text="Welcome Administrator!  What do you want to see today?"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/button_height_55"
-        android:layout_marginStart="8dp"
-        android:background="@drawable/rounded_button"
-        android:onClick="btnGenresOnClick"
-        android:text="Books searched by domains"
-        app:layout_constraintBaseline_toBaselineOf="@+id/button2"
-        app:layout_constraintStart_toEndOf="@+id/button2" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/button_height_55"
-        android:layout_marginEnd="28dp"
-        android:background="@drawable/rounded_button"
-        android:onClick="btnLoggingLatWeekOnClick"
-        android:text="Loggings on last week"
-        app:layout_constraintBaseline_toBaselineOf="@+id/button6"
-        app:layout_constraintEnd_toEndOf="parent" />
 </android.support.constraint.ConstraintLayout>
