--- a/app/src/main/res/layout/content_last_searched_books.xml
+++ b/app/src/main/res/layout/content_last_searched_books.xml
@@ -20,7 +20,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
+    <TextView
+        android:id="@+id/no_books_searched"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No books were searched in the last day."
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView15"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="30sp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvLastBooks"
         android:layout_width="match_parent"
