--- a/app/src/main/res/layout/content_last_connected_users.xml
+++ b/app/src/main/res/layout/content_last_connected_users.xml
@@ -9,6 +9,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <TextView
+        android:id="@+id/textView16"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -19,11 +20,23 @@
         app:layout_constraintStart_toStartOf="@+id/guideline36"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/no_users"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="No user logged on in the last hour."
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline37"
+        app:layout_constraintTop_toBottomOf="@+id/textView16"
+        app:layout_constraintStart_toStartOf="@id/guideline36"
+        android:visibility="gone"
+        app:layout_constraintVertical_bias="0.493" />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvUsers"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="288dp"
+        android:layout_marginBottom="400dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline37"
         app:layout_constraintHorizontal_bias="0.0"
