--- a/app/src/main/res/layout/nav_header_administrator.xml
+++ b/app/src/main/res/layout/nav_header_administrator.xml
@@ -26,12 +26,16 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/nav_header_title"
+        android:textAlignment="textStart"
+        android:textColor="@android:color/white"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
         android:id="@+id/tvAdminEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/nav_header_subtitle" />
+        android:text="@string/nav_header_subtitle"
+        android:textAlignment="textStart"
+        android:textColor="@android:color/white"/>
 
 </LinearLayout>
