--- a/app/src/main/res/menu/activity_index_drawer.xml
+++ b/app/src/main/res/menu/activity_index_drawer.xml
@@ -18,16 +18,8 @@
             android:title="Favourites"/>
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Log out">
         <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
             <item
                 android:id="@+id/nav_log_out"
                 android:icon="@drawable/ic_menu_log_out"
